--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,28 @@
 *~
 *.swp
+
 # Eclipse
 .project
 .classpath
 .settings
 target/
+
 # Intellij
 .idea/
 *.iml
+/out/
+
 # database file
 data.db
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# gradle
+build
+.gradle/
