--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,63 @@
 *~
 *.swp
 
-# Eclipse
+### Eclipse
 .project
 .classpath
 .settings
 target/
 classes/
 
-# Intellij
+### Windows template
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+### Folder config file
+Desktop.ini
+
+### Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+### Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+### Windows shortcuts
+*.lnk
+
+### NetBeans template
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+.nb-gradle/
+
+### Intellij
 .idea/
 *.iml
 /out/
 
-# database file
+### database file
 data.db
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
+### Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+### virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# gradle
-build
+### gradle
 .gradle/
 
-# Exclude libs
+### Exclude libs
 !lib
 !lib/*.jar
 !/gradle/wrapper/*
