--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.8.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.191</version>
+        </dependency>
         <!-- Guava la lib ultime -->
         <dependency>
             <groupId>com.google.guava</groupId>
